Fix button vertical alignment

--- a/app/stylesheets/components/buttons.less
+++ b/app/stylesheets/components/buttons.less
@@ -12,7 +12,7 @@
   font-size: 12px;
   font-weight: 500;
   height: 25px;
-  line-height: 25px;
+  line-height: 2;
   padding: 0 8px;
   letter-spacing: .2px;
 
